--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -74,8 +74,8 @@
                 <div class="meta-item">
                     <span class="label">Categorías:</span>
                     <div class="tags">
-                        <span class="tag">Datos Curiosos</span>
-                        <span class="tag">Perros</span>
+                        <span class="tag tag-datos-curiosos">Datos Curiosos</span>
+                        <span class="tag tag-perros">Perros</span>
                     </div>
                 </div>
             </div>
