--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -83,60 +83,63 @@
     </section>
 
     <!-- Blog Article -->
-    <main class="blog-article">
-        <div class="article-content">
-            <img src="https://images.unsplash.com/photo-1597662942561-776cff97660d" alt="Perro feliz" class="article-main-image">
-            
-            <div class="article-text">
-                <p>Veniam voluptate ea enim fugiat elit dolor deserunt anim cillum officia tempor laborum fugiat quis cupidatat. Nisi enim ipsum cillum duis labore et voluptate pariatur. Sit dolor incididunt Lorem laborum officia mollit.</p>
+    <main class="blog-article" style="margin-top: 2rem;">
+        <div class="content-wrapper" style="margin: 0 auto;">
+            <div class="article-content">
+                <img src="https://images.unsplash.com/photo-1597662942561-776cff97660d" alt="Perro feliz" class="article-main-image">
                 
-                <img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e" alt="Perro jugando" class="article-inline-image">
-                
-                <p>Aliqua magna esse officia duis culpa aute tempor eu laboris sunt laborum Lorem reprehenderit veniam nisi est minim aliquip. Adipisicing minim aliquip do occaecat do commodo sint consectetur nisi nisi cillum commodo officia dolor sint cillum cupidatat nisi.Ullamco.</p>
-            </div>
-
-            <div class="author-section">
-                <h3>CONOCE AL AUTOR</h3>
-                <div class="author-info">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=150" alt="Valeria Arenas" class="author-image">
-                    <div class="author-details">
-                        <h4>Valeria Arenas</h4>
-                        <p>Médica veterinaria con experiencia en cuidado canino y yoga</p>
-                        <a href="https://www.sebastiankoseda.com" class="author-link">www.sebastiankoseda.com</a>
-                    </div>
+                <div class="article-text">
+                    <p>Veniam voluptate ea enim fugiat elit dolor deserunt anim cillum officia tempor laborum fugiat quis cupidatat. Nisi enim ipsum cillum duis labore et voluptate pariatur. Sit dolor incididunt Lorem laborum officia mollit.</p>
+                    
+                    <img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e" alt="Perro jugando" class="article-inline-image">
+                    
+                    <p>Aliqua magna esse officia duis culpa aute tempor eu laboris sunt laborum Lorem reprehenderit veniam nisi est minim aliquip. Adipisicing minim aliquip do occaecat do commodo sint consectetur nisi nisi cillum commodo officia dolor sint cillum cupidatat nisi.Ullamco.</p>
                 </div>
             </div>
+
+            <aside class="related-content">
+                <h3>Más contenido</h3>
+                <div class="related-articles">
+                    <article class="related-article">
+                        <img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e" alt="Perros vs Gatos">
+                        <div class="article-info">
+                            <h4>Perros v.s Gatos</h4>
+                            <p>El buen cuidado: una necesidad de perros y gatos.</p>
+                            <div class="tags">
+                                <span class="tag">Perros</span>
+                                <span class="tag">Gatos</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="related-article">
+                        <img src="https://images.unsplash.com/photo-1537151608828-ea2b11777ee8" alt="Tips de viaje">
+                        <div class="article-info">
+                            <h4>Tips de viaje</h4>
+                            <p>Personalizamos nuestras recomendaciones según tus necesidades específicas.</p>
+                            <div class="tags">
+                                <span class="tag">Datos Curiosos</span>
+                                <span class="tag">Perros</span>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </aside>
         </div>
-
-        <aside class="related-content">
-            <h3>Más contenido</h3>
-            <div class="related-articles">
-                <article class="related-article">
-                    <img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e" alt="Perros vs Gatos">
-                    <div class="article-info">
-                        <h4>Perros v.s Gatos</h4>
-                        <p>El buen cuidado: una necesidad de perros y gatos.</p>
-                        <div class="tags">
-                            <span class="tag">Perros</span>
-                            <span class="tag">Gatos</span>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="related-article">
-                    <img src="https://images.unsplash.com/photo-1537151608828-ea2b11777ee8" alt="Tips de viaje">
-                    <div class="article-info">
-                        <h4>Tips de viaje</h4>
-                        <p>Personalizamos nuestras recomendaciones según tus necesidades específicas.</p>
-                        <div class="tags">
-                            <span class="tag">Datos Curiosos</span>
-                            <span class="tag">Perros</span>
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </aside>
     </main>
+
+    <!-- Author Section -->
+    <section class="author-section">
+        <h3>CONOCE AL AUTOR</h3>
+        <div class="author-info">
+            <img src="https://images.unsplash.com/photo-1600188769099-d25b4ec79659?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Valeria Arenas" class="author-image">
+            <div class="author-details">
+                <h4>Valeria Arenas</h4>
+                <p>Médica veterinaria con experiencia en cuidado canino y yoga</p>
+                <a href="https://www.sebastiankoseda.com" class="author-link">www.sebastiankoseda.com</a>
+            </div>
+        </div>
+    </section>
 
     <!-- Newsletter Section -->
     <section class="newsletter">
