--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -65,11 +65,11 @@
             <div class="article-meta">
                 <div class="meta-item">
                     <span class="label">Autor:</span>
-                    <span>Valeria Arenas</span>
+                    <span>Juan Angarita</span>
                 </div>
                 <div class="meta-item">
                     <span class="label">Fecha:</span>
-                    <span>Mayo 14, 2023</span>
+                    <span>19 Agosto 2018</span>
                 </div>
                 <div class="meta-item">
                     <span class="label">Categorías:</span>
@@ -106,8 +106,8 @@
                             <h4>Perros v.s Gatos</h4>
                             <p>El buen cuidado: una necesidad de perros y gatos.</p>
                             <div class="tags">
-                                <span class="tag">Perros</span>
-                                <span class="tag">Gatos</span>
+                                <span class="tag tag-perros">Perros</span>
+                                <span class="tag tag-gatos">Gatos</span>
                             </div>
                         </div>
                     </article>
@@ -118,8 +118,8 @@
                             <h4>Tips de viaje</h4>
                             <p>Personalizamos nuestras recomendaciones según tus necesidades específicas.</p>
                             <div class="tags">
-                                <span class="tag">Datos Curiosos</span>
-                                <span class="tag">Perros</span>
+                                <span class="tag tag-datos-curiosos">Datos Curiosos</span>
+                                <span class="tag tag-perros">Perros</span>
                             </div>
                         </div>
                     </article>
@@ -132,11 +132,11 @@
     <section class="author-section">
         <h3>CONOCE AL AUTOR</h3>
         <div class="author-info">
-            <img src="https://images.unsplash.com/photo-1600188769099-d25b4ec79659?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Valeria Arenas" class="author-image">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3NPPDHa7KZOOFduIg5daz6GRMo8E_6kN7OA&s" alt="Juan Angarita" class="author-image">
             <div class="author-details">
-                <h4>Valeria Arenas</h4>
+                <h4>Juan Angarita</h4>
                 <p>Médica veterinaria con experiencia en cuidado canino y yoga</p>
-                <a href="https://www.sebastiankoseda.com" class="author-link">www.sebastiankoseda.com</a>
+                <a href="https://www.linkedin.com/in/juan-sebasti%C3%A1n-angarita-torres-763a09178/?originalSubdomain=co" class="author-link">www.sebastiankoseda.com</a>
             </div>
         </div>
     </section>
