--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -136,7 +136,7 @@
             <div class="author-details">
                 <h4>Juan Angarita</h4>
                 <p>Médica veterinaria con experiencia en cuidado canino y yoga</p>
-                <a href="https://www.linkedin.com/in/juan-sebasti%C3%A1n-angarita-torres-763a09178/?originalSubdomain=co" class="author-link">www.sebastiankoseda.com</a>
+                <a href="https://www.linkedin.com/in/juan-sebasti%C3%A1n-angarita-torres-763a09178/?originalSubdomain=co" class="author-link">w ww.juseanto.com</a>
             </div>
         </div>
     </section>
