refactor: nav-bar-links

--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -30,7 +30,7 @@
                 <a href="/" class="nav-link">Inicio</a>
                 <a href="/specialties" class="nav-link">Especialidades</a>
                 <a href="/blog" class="nav-link active">Blog</a>
-                <a href="#cta" class="nav-link">Contacto</a>
+                <a href="/#cta" class="nav-link">Contacto</a>
             </div>
 
             <div class="nav-right">
