--- a/demo/src/main/resources/templates/specialties.html
+++ b/demo/src/main/resources/templates/specialties.html
@@ -26,7 +26,7 @@
         <div class="nav-center">
           <a href="/" class="nav-link">Inicio</a>
           <a href="#" class="nav-link active">Especialidades</a>
-          <a href="#" class="nav-link">Blog</a>
+          <a href="/blog" class="nav-link">Blog</a>
           <a href="/#cta" class="nav-link">Contacto</a>
         </div>
 
