refactor: color-brand-name-blog

--- a/demo/src/main/resources/templates/blog.html
+++ b/demo/src/main/resources/templates/blog.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-left">
-                <a href="/" style="text-decoration: none; display: flex; align-items: center; gap: 0.75rem;">
+                <a href="/" style="text-decoration: none; display: flex; align-items: center; gap: 0.75rem;color: black;">
                     <img src="/assets/images/logo_shiba.png" alt="Logo" class="logo">
                     <span class="brand-name">Clínica<br>Shiba</span>
                 </a>
