refactor:  62 more photos

--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -66,11 +66,11 @@
       </figure>
       <div class="hero-content scroll-reveal">
         <article class="hero-text">
-          <h1>La Clínica Veteriaria<br />de Mayor Impacto en<br />Colombia</h1>
+          <h1>La Clínica Veterinaria<br />de Mayor Impacto en<br />Colombia</h1>
           <p>
             La felicidad y la salud de tu mascota son nuestra prioridad.<br />
             Tu compañero de vida recibirá el mejor cuidado en manos<br />
-            de profesionales experimentados y apasionados por la<br />
+            de profesionales expertos y apasionados por la<br />
             salud animal.
           </p>
 
