hotfix: Mascota edit navigation

--- a/demo/src/main/resources/templates/crear_mascota.html
+++ b/demo/src/main/resources/templates/crear_mascota.html
@@ -141,7 +141,7 @@
 
         <!-- Pie de página del formulario -->
         <article class="form-footer">
-          <a href="/mascota/all" class="cancel-button">
+          <a href="/mascota/edit" class="cancel-button">
             <i data-lucide="x"></i>
             Cancelar
           </a>
