--- a/demo/src/main/resources/static/css/client_view.css
+++ b/demo/src/main/resources/static/css/client_view.css
@@ -107,7 +107,7 @@ body {
 .title-section {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0;
 }
 
 .title-section i {
@@ -258,7 +258,7 @@ tr:nth-child(even) {
   font-weight: 500;
   text-decoration: none;
   transition: background-color 0.2s;
-  margin-left: 1rem;
+  margin: 0;
 }
 
 .add-button:hover {
