--- a/demo/src/main/resources/templates/mostrar_todas_mascotas.html
+++ b/demo/src/main/resources/templates/mostrar_todas_mascotas.html
@@ -22,10 +22,12 @@
     <!-- Contenido de la página -->
     <main class="container">
       <section class="table-header">
-        <article class="title-section">
-          <i data-lucide="users"></i>
-          <h1>Lista de Mascotas</h1>
-        </article>
+        <a href="/mascota/all" style="text-decoration: none;">
+          <article class="title-section" style="color: black;">
+            <i data-lucide="users"></i>
+            <h1>Lista de Mascotas</h1>
+          </article>
+        </a>
         <article class="search-section">
           <form action="/mascota/search" method="get">
             <div class="search-container">
@@ -34,7 +36,6 @@
               <!-- Remove the search button -->
             </div>
           </form>
-          <button id="reset-search" class="reset-button">Ver todas las mascotas</button>
         </article>
       </section>
 
