--- a/demo/src/main/resources/templates/modificar_veterinario.html
+++ b/demo/src/main/resources/templates/modificar_veterinario.html
@@ -78,6 +78,18 @@
                   placeholder="Ingresa la URL de la foto" />
               </div>
             </div>
+            <div class="form-group">
+              <label for="numAtenciones">Número de Atenciones</label>
+              <div class="input-container">
+                <i data-lucide="activity" class="input-icon"></i>
+                <input
+                  th:field="*{numAtenciones}"
+                  type="number"
+                  min="0"
+                  id="numAtenciones"
+                  placeholder="Ingresa el número de atenciones" />
+              </div>
+            </div>
           </article>
 
           <!-- Sección de contraseña -->
