--- a/demo/src/main/resources/templates/login_user.html
+++ b/demo/src/main/resources/templates/login_user.html
@@ -81,8 +81,7 @@
           src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?q=80&w=2776&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="Perro con chaqueta" />
       </article>
-    </section>
-
-    <script src="/js/login.js"></script>
+    </section>    <script src="/js/login.js"></script>
+    <script src="/js/auth.js"></script>
   </body>
 </html>
